Allow hostnames that are IP addresses with a netmask even when running with --skip-name-resolve. (Bug #8471)